# bitdribble

./: .travis.yml  CMakeLists.txt  README.md  config.h.in
cmake/Includes/: SystemChecks.cmake
cmake/Modules/: FindLIBYAML.cmake  FindMicroHttpd.cmake
cmake/Toolchains/: Toolchain-apple-gcc.cmake  Toolchain-i686-w64-mingw32.cmake  Toolchain-openwrt-x86_64_gcc_musl.cmake  Toolchain-x86_64-w64-mingw32.cmake
demo/: gcloud-demo.yml  graphite-demo-HOWTO.txt  graphite-demo-dashboard.json  graphite-demo.yml
docker/: alpine  alpine-HOWTO.txt  alpine.build
include/bitd/: base64.h  common.h  file.h  format.h  hash.h  lambda.h  log.h  mmr-api.h  module-api.h  msg.h  pack.h  platform-dll.h  platform-file.h  platform-inetutil.h  platform-netdb.h  platform-poll-event.h  platform-random.h  platform-socket.h  platform-sys.h  platform-thread.h  platform-time.h  platform-types.h  timer-list.h  timer-thread.h  tstamp.h  types.h
include/bitd/arch/: arch-thread.h
install/: CMakeLists.txt
install/deb/: prerm
install/etc/: bitd.yml
install/rpm/: bitd.spec.in  bitd.spec.in.bak
install/systemd/: bitd.service
src/: CMakeLists.txt
src/bitd-agent/: CMakeLists.txt  bitd-agent.c
src/bitd-object/: CMakeLists.txt  bitd-object.c
src/libs/: CMakeLists.txt
src/libs/bitd/: CMakeLists.txt  base64.c  file.c  format.c  hash.c  lambda.c  log.c  mmr-api.c  mmr-event-loop.c  mmr-log.c  mmr-module.c  mmr-sched.c  mmr-task-inst.c  mmr-task.c  mmr-utils.c  mmr.h  msg.c  pack.c  platform-addrinfo.c  platform-dll.c  platform-event.c  platform-file.c  platform-hostent.c  platform-inetutil.c  platform-mutex.c  platform-netdb.c  platform-poll-event.c  platform-random.c  platform-socket.c  platform-sys.c  platform-thread-pthread.c  platform-thread-windows.c  platform-thread.c  platform-time.c  timer-list.c  timer-thread.c  tstamp.c  types-assert.c  types-json.c  types-xml.c  (+2 more)
src/modules/: CMakeLists.txt  assert.c  echo.c  echo.xml  echo.yml  exec-HOWTO.txt  exec.c  exec.xml  exec.yml
src/modules/base/: curl.c  ssl.c
src/modules/config/: #log.yml#  log.c  log.yml
src/modules/http/: httpd.c  httpd.yml
src/modules/sink/: graphite.c  graphite.yml  influxdb.c  influxdb.yml
src/modules/source/: httpd.c  httpd.yml
src/tests/: CMakeLists.txt  test-base64.c  test-dll.c  test-dll1.c  test-dll2.c  test-getaddrinfo.c  test-gethostbyname.c  test-hash.c  test-lambda.c  test-lib1.c  test-lib2.c  test-log.c  test-msg.c  test-mutex.c  test-nvp-merge.c  test-nvp-string.c  test-nvp.json  test-nvp.xml  test-nvp.yml  test-object.c  test-pack.c  test-queue.c  test-resolve-hostport.c  test-sleep.c  test-tcp-ts.c  test-tcp.c  test-thread.c  test-time.c  test-timer-list.c  test-timer-thread.c  test-util.c  test-util.h
src/tests/config/: merge-base.xml  merge-new.xml  merge-old.xml  merge-result.xml  nvp-anchor.yaml  nvp-full.json  nvp-full.xml  nvp-full.yaml  nvp-merged-anchor.yaml  nvp-sorted.xml  nvp.json  nvp.xml  nvp.yaml  nvp1.yaml  string.xml
src/tests/config/echo/: echo.json  echo.xml  echo.yml
src/tests/config/exec/: exec-win32.yml  exec.yml
